<resources>
    <string name="app_name">BucketList</string>

    <string name="title_home">Home</string>
    <string name="title_films">My Films</string>
    <string name="title_books">My Books</string>
    <string name="title_games">My Games</string>
    <string name="title_series">My Series</string>
    <string name="title_goals">My Goals</string>

    <string name="action_search">Search</string>
    <string name="action_viewAll">View All Items</string>
    <string name="action_account">My Account</string>
    <string name="action_logout">Log Out</string>
    <string name="search_hint">Search films, series, books, and games</string>

    <string name="radio_films">Films</string>
    <string name="radio_books">Books</string>
    <string name="radio_games">Games</string>
    <string name="radio_series">Series</string>
    <string name="radio_goals">Goals</string>

    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
