<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bucketlist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_films"
        android:name="com.example.bucketlist.ui.films.FilmsFragment"
        android:label="@string/title_films"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.bucketlist.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.example.bucketlist.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />
</navigation>