<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ManualAddActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="#000000"
                android:text="Add A Bucket List Entry"
                android:textSize="28dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:text="Name"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter name of bucket list entry"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:textColor="#000000"
                android:text="Category"/>
            <RadioGroup
                android:layout_marginTop="15dp"
                android:id="@+id/categoryChoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/films"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_films" />

                <RadioButton
                    android:id="@+id/books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_books" />

                <RadioButton
                    android:id="@+id/games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_games" />

                <RadioButton
                    android:id="@+id/series"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_series" />

                <RadioButton
                    android:id="@+id/goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_goals" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:text="Description"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="Enter description"/>
            <LinearLayout
                android:id="@+id/activity_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="right">
                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CANCEL"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/cancel_button"/>
                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="ADD TO MY BUCKET LIST"
                    android:textColor="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_green_rounded_corners"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>